# 2026-software-lab

./: .cursorrules  .gitignore  ARCHITECTURE_REVIEW.md  LICENSE  README.md  flake.nix  pyproject.toml  result
.devcontainer/: devcontainer.json
.github/workflows/: DEPLOY_COMPARISON.md  ci-cd-pipeline.yml  deploy-smoke.yml  deploy.-backup_2.yml  deploy.yml  deploy_api_backup.uml  main.yml  ship-image.yml  ship-registry.yml  smoke-test.yml  verify-source.yml
.github/workflows/reusable/: deploy.yml  ship-registry.yml  smoke-test.yml  verify-source.yml
apps/: registry.json  registry.yaml
apps/research-auditor/: REVIEW.md  audit_env.py  critic.py  graph.py  main.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  researcher.py
apps/research-auditor/app/: __init__.py  config.py  main.py
apps/research-auditor/app/agents/: critic.py  models.py  researcher.py
apps/research-auditor/app/db/: null_repo.py  repo.py  supabase_repo.py
apps/research-auditor/app/entrypoints/: http.py
apps/research-auditor/app/orchestrator/: run.py
apps/research-auditor/docs/: ARCHITECTURE.md  README.md
apps/research-auditor/scripts/: railway_smoke_server.py
apps/research-auditor/tests/: __init__.py
apps/research-auditor/tests/integration/: test_smoke.py
apps/research-auditor/tests/unit/: test_app_smoke.py
apps/smart-writer/: .env.example  pyproject.toml  railway.toml
apps/smart-writer/app/: __init__.py  config.py  main.py
apps/smart-writer/app/agents/: assessor.py  canonical_library.py  canonical_library_ids.py  compose_values.py  craft_values.py  embeddings.py  feedback_merge.py  grounding_assessor.py  library_match.py  llm_settings.py  models.py  refresh_rubric_anchors.py  research_planning.py  rubric_builder.py  rubric_digest.py  value_decoder.py  writer.py
apps/smart-writer/app/data/: canonical_values.json
apps/smart-writer/app/db/: client.py  supabase_repo.py
apps/smart-writer/app/entrypoints/: http.py
apps/smart-writer/app/llm/: __init__.py  retry.py
apps/smart-writer/app/orchestrator/: run.py
apps/smart-writer/app/prompts/: __init__.py  loader.py  models.py  render.py
apps/smart-writer/app/prompts/programs/smart_writer_default/: assessor.txt  decoder.txt  grounding.txt  manifest.toml  planner.txt  refresh_rubric_anchors.txt  rubric.txt  writer.txt
apps/smart-writer/app/retrieval/: __init__.py  bundle_builder.py  fetch_safe.py  search_backends.py  url_extract.py
apps/smart-writer/docs/: ARCHITECTURE.md  Improvement-suggestions.md  README.md  TODO-smart-writer.md  design-canonical-value-rubric-library.md  design-research-planning-phase.md  design-retrieval-grounding.md  design-versioned-prompt-program.md  design-weighted-values-craft-hygiene.md
apps/smart-writer/tests/: __init__.py  conftest.py
apps/smart-writer/tests/fixtures/: __init__.py  sample_payloads.py
apps/smart-writer/tests/integration/: test_http_audit.py  test_workflow_mocked.py
apps/smart-writer/tests/unit/: test_app_smoke.py  test_bundle_supplemental_queries.py  test_canonical_library.py  test_canonical_library_ids.py  test_compose_values.py  test_config_defaults.py  test_feedback_merge.py  test_library_match.py  test_llm_retry.py  test_llm_settings.py  test_orchestrator_routing.py  test_prompt_program.py  test_research_planning_resolve.py  test_research_planning_sanitize.py  test_rubric_builder_library.py  test_rubric_digest.py  test_url_extract.py  test_value_definition.py
deploy/railway/: README.md  production.yml  production_old.yml  staging.yml
deploy/railway/production/: research-auditor.yml  smart-writer.yml
deploy/railway/staging/: research-auditor.yml
docs/: developer-cheat-sheet.md  github-workflow-review.md
docs/archive/: ARCH_Review_old_archive.md  FLAKE_review_old_archive.md
notes/: todo-review-deploy-and-smoke  todo.md
scripts/: validate_app_registry.py
